--- a/browser/js/about/about.html
+++ b/browser/js/about/about.html
@@ -1,11 +1,15 @@
-<section id="about">
-    <p>
-        This website--the very one at which you currently gaze--was created by a basic scaffolding
-        concocted at Fullstack Academy. Here are some of the people who make it all very real:
-    </p>
-    <carousel interval="2000">
-        <slide ng-repeat="image in images">
-            <img height="300" ng-src="{{ image }}" />
-        </slide>
-    </carousel>
-</section>
+<div>
+  <form novalidate class="simple-form">
+    CONTENT: <input type="text" ng-model="content" /><br />
+    <input type="submit" ng-click="sendToGoog(content)" value="Save" />
+  </form>
+</div>
+
+<div>
+  <form novalidate class="simple-form">
+    USERNAME: <input type="text" ng-model="userName" /><br />
+    <input type="submit" ng-click="sendToTwit(userName)" value="Save" />
+  </form>
+</div>
+
+<h1 ng-show="result">{{ result.data.documentSentiment }}</h1>
